[package]
name = "rutrack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
futures-channel = "0.3.21"
futures-util = "0.3.21"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
structopt = "0.3.26"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["full"] }
tokio-tungstenite = "0.17.1"
